<resources>
    <string name="app_name">Geco</string>
    <string name="title_activity_main">Geco Crushers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Geco Crushers</string>
    <string name="nav_header_subtitle">geco tag line</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_product">Products</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_deals">Hot Deals</string>
    <string name="title_activity_saved">Saved Products</string>
    <string name="title_activity_maps">Map</string>
    <string name="geco_logo">geco logo</string>
    <string name="version_1_0v">Version - 1.0v</string>
    <string name="description">Description</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_number">Contact Number:</string>
    <string name="email">Email:</string>
    <string name="product_image">product image</string>
    <string name="share">Share</string>
    <string name="call">Call</string>
    <string name="get_quote">Get Quote</string>
    <string name="save">Save</string>
    <string name="product_description">Product Description</string>
    <string name="specification">Specification</string>
    <string name="wintile_solutions">Wintile Solutions</string>
    <string name="support_gecocrushers_com">support@gecocrushers.com</string>
    <string name="geco_phone_number">1234567890</string>
    <string name="contact_info">Contact Info</string>
    <string name="powered_by">Powered By</string>
    <string name="address">Address</string>
    <string name="subject">Subject</string>
    <string name="email_id">Email ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="have_questions_write_to_us">Have Questions? Write to us.</string>
    <string name="products_gallery">Product Gallery</string>
    <string name="about_us">About us</string>
    <string name="sub_products">Sub Products</string>
    <string name="the_saved_items_are_empty">The Saved Items Are Empty!!!</string>
    <string name="sorry_no_deals_today">Sorry No deals Today!!!</string>
    <string name="see_more">See More</string>
    <string name="phone_number_value"><u>1234567890</u></string>
</resources>
