<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".itemDetailsActivity"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/product_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/imageView"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:nestedScrollingEnabled="false"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:fontFamily="@font/breeserifregular"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EEEEEE">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:weightSum="1"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/idShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight=".25"
                android:gravity="center"
                android:onClick="share"
                android:orientation="vertical"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/share"
                    android:padding="2dp"
                    android:src="@drawable/ic_share_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="@string/share" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/idCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight=".25"
                android:gravity="center"
                android:onClick="call"
                android:orientation="vertical"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_call_black_24dp"
                    android:contentDescription="@string/call" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="@string/call" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/idGetQuote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight=".25"
                android:gravity="center"
                android:onClick="getQuote"
                android:orientation="vertical"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/get_quote"
                    android:padding="2dp"
                    android:src="@drawable/ic_assignment_returned_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="@string/get_quote" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/idSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight=".25"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="4dp">

                <CheckBox
                    android:id="@+id/likeIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/like_icon"
                    android:button="@null"
                    android:checked="false"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="2dp"
                    android:stateListAnimator="@animator/scale"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="@string/save" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EEEEEE">
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/product_description"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EEEEEE">
            <!--android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"-->
        </LinearLayout>
        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EEEEEE"/>
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:text="@string/specification"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:contentDescription="@string/specification"
                android:id="@+id/ivSpecs"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>
